--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -58,6 +58,7 @@
 
 
         <EditText
+            android:inputType="number"
             android:padding="10dp"
             android:background="@color/gridbg"
             android:layout_marginTop="20dp"
