--- a/app/src/main/res/layout/activity_view_employee.xml
+++ b/app/src/main/res/layout/activity_view_employee.xml
@@ -23,17 +23,17 @@
 
         <LinearLayout
             android:layout_marginTop="20dp"
-            android:id="@+id/edit"
+            android:id="@+id/editemployee"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="end">
 
             <ImageView
                 android:clickable="true"
-                android:id="@+id/editcompany"
+                android:id="@+id/editEmp"
                 android:layout_marginRight="10dp"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:src="@drawable/edit"/>
 
         </LinearLayout>
@@ -44,7 +44,7 @@
             android:layout_marginTop="5dp"
             android:layout_gravity="center"
             android:padding="10dp"
-            android:id="@+id/compname"
+            android:id="@+id/Empname"
             android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -112,11 +112,12 @@
 
                             />
                         <TextView
+                            android:id="@+id/empComp"
                             android:layout_weight="1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="10dp"
-                            android:gravity="center"
+                            android:gravity="start"
                             android:textColor="@color/headerfont"
                             android:text="N/A"
 
@@ -145,11 +146,13 @@
 
                             />
                         <TextView
+                            android:id="@+id/empAdd"
+
                             android:layout_weight="1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="10dp"
-                            android:gravity="center"
+                            android:gravity="start"
 
                             android:textColor="@color/headerfont"
                             android:text="N/A"
@@ -182,11 +185,13 @@
 
                             />
                         <TextView
+                            android:id="@+id/empContact"
+
                             android:layout_weight="1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="10dp"
-                            android:gravity="center"
+                            android:gravity="start"
 
                             android:textColor="@color/headerfont"
                             android:text="N/A"
@@ -219,11 +224,13 @@
 
                             />
                         <TextView
+                            android:id="@+id/empDOB"
+
                             android:layout_weight="1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="10dp"
-                            android:gravity="center"
+                            android:gravity="start"
 
                             android:textColor="@color/headerfont"
                             android:text="N/A"
@@ -254,11 +261,12 @@
 
                             />
                         <TextView
+                            android:id="@+id/empemail"
                             android:layout_weight="1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="10dp"
-                            android:gravity="center"
+                            android:gravity="start"
                             android:textColor="@color/headerfont"
                             android:text="N/A"
 
@@ -307,15 +315,17 @@
                             android:padding="10dp"
                             android:textColor="@color/secondary"
                             android:textStyle="bold"
-                            android:text="Labour Card Number"
+                            android:text="Emirates ID"
 
                             />
                         <TextView
+                            android:id="@+id/empEMID"
+
                             android:layout_weight="1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="10dp"
-                            android:gravity="center"
+                            android:gravity="start"
 
                             android:textColor="@color/headerfont"
                             android:text="N/A"
@@ -347,11 +357,13 @@
 
                             />
                         <TextView
+                            android:id="@+id/empPPN"
+
                             android:layout_weight="1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="10dp"
-                            android:gravity="center"
+                            android:gravity="start"
                             android:textColor="@color/headerfont"
                             android:text="N/A"
 
@@ -384,11 +396,13 @@
 
                             />
                         <TextView
+                            android:id="@+id/empWP"
+
                             android:layout_weight="1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="10dp"
-                            android:gravity="center"
+                            android:gravity="start"
                             android:textColor="@color/headerfont"
                             android:text="N/A"
 
@@ -420,11 +434,13 @@
 
                             />
                         <TextView
+                            android:id="@+id/empUIDNo"
+
                             android:layout_weight="1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="10dp"
-                            android:gravity="center"
+                            android:gravity="start"
                             android:textColor="@color/headerfont"
                             android:text="N/A"
 
@@ -456,11 +472,13 @@
 
                             />
                         <TextView
+                            android:id="@+id/empFNo"
+
                             android:layout_weight="1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="10dp"
-                            android:gravity="center"
+                            android:gravity="start"
                             android:textColor="@color/headerfont"
                             android:text="N/A"
 
@@ -477,95 +495,95 @@
 
                     <!--Employee and notification grid starts -->
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="50dp"
-                        android:orientation="vertical">
+                    <!--<LinearLayout-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_marginTop="50dp"-->
+                        <!--android:orientation="vertical">-->
 
-                        <GridLayout
-                            android:layout_gravity="bottom"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:columnCount="2"
-                            android:padding="10dp"
-                            android:layout_margin="10dp">
+                        <!--<GridLayout-->
+                            <!--android:layout_gravity="bottom"-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:columnCount="2"-->
+                            <!--android:padding="10dp"-->
+                            <!--android:layout_margin="10dp">-->
 
-                            <android.support.v7.widget.CardView
-                                android:layout_width="0dp"
-                                android:layout_height="120dp"
-                                android:layout_columnWeight="1"
+                            <!--<android.support.v7.widget.CardView-->
+                                <!--android:layout_width="0dp"-->
+                                <!--android:layout_height="120dp"-->
+                                <!--android:layout_columnWeight="1"-->
 
-                                android:layout_gravity="fill_horizontal"
-                                android:layout_margin="10dp"
-                                android:gravity="center"
-                                app:cardBackgroundColor="@color/grid"
-                                >
+                                <!--android:layout_gravity="fill_horizontal"-->
+                                <!--android:layout_margin="10dp"-->
+                                <!--android:gravity="center"-->
+                                <!--app:cardBackgroundColor="@color/grid"-->
+                                <!--&gt;-->
 
-                                <TextView
-                                    android:layout_height="wrap_content"
-                                    android:layout_width="match_parent"
-                                    android:layout_gravity="center_horizontal"
-                                    android:layout_marginTop="10dp"
-                                    android:textColor="@android:color/white"
-                                    android:gravity="center"
-                                    android:textSize="18dp"
-                                    android:text="Employees"
-                                    />
-
-
-                                <TextView
-                                    android:layout_height="wrap_content"
-                                    android:layout_width="wrap_content"
-                                    android:layout_gravity="bottom|center_horizontal"
-                                    android:layout_marginTop="5dp"
-                                    android:layout_marginBottom="10dp"
-                                    android:textColor="@color/NotifyText"
-                                    android:textSize="30dp"
-                                    android:text="0"
-                                    />
-
-                            </android.support.v7.widget.CardView>
+                                <!--<TextView-->
+                                    <!--android:layout_height="wrap_content"-->
+                                    <!--android:layout_width="match_parent"-->
+                                    <!--android:layout_gravity="center_horizontal"-->
+                                    <!--android:layout_marginTop="10dp"-->
+                                    <!--android:textColor="@android:color/white"-->
+                                    <!--android:gravity="center"-->
+                                    <!--android:textSize="18dp"-->
+                                    <!--android:text="Employees"-->
+                                    <!--/>-->
 
 
-                            <android.support.v7.widget.CardView
-                                android:layout_width="0dp"
-                                android:layout_height="120dp"
+                                <!--<TextView-->
+                                    <!--android:layout_height="wrap_content"-->
+                                    <!--android:layout_width="wrap_content"-->
+                                    <!--android:layout_gravity="bottom|center_horizontal"-->
+                                    <!--android:layout_marginTop="5dp"-->
+                                    <!--android:layout_marginBottom="10dp"-->
+                                    <!--android:textColor="@color/NotifyText"-->
+                                    <!--android:textSize="30dp"-->
+                                    <!--android:text="0"-->
+                                    <!--/>-->
 
-                                android:layout_columnWeight="1"
-                                android:layout_gravity="fill_horizontal"
-                                android:layout_margin="10dp"
-                                android:gravity="center"
-                                app:cardBackgroundColor="@color/grid"
-                                >
-
-                                <TextView
-                                    android:padding="2dp"
-                                    android:layout_height="wrap_content"
-                                    android:layout_width="match_parent"
-                                    android:layout_gravity="center_horizontal"
-                                    android:layout_marginTop="10dp"
-                                    android:textColor="@android:color/white"
-                                    android:textSize="18dp"
-                                    android:text="Notifications"
-                                    android:gravity="center"
-                                    />
+                            <!--</android.support.v7.widget.CardView>-->
 
 
-                                <TextView
-                                    android:layout_height="wrap_content"
-                                    android:layout_width="wrap_content"
-                                    android:layout_gravity="bottom|center_horizontal"
-                                    android:layout_marginTop="5dp"
-                                    android:layout_marginBottom="10dp"
-                                    android:textColor="@color/NotifyText"
-                                    android:textSize="30dp"
-                                    android:text="0"
-                                    />
+                            <!--<android.support.v7.widget.CardView-->
+                                <!--android:layout_width="0dp"-->
+                                <!--android:layout_height="120dp"-->
 
-                            </android.support.v7.widget.CardView>
-                        </GridLayout>
-                    </LinearLayout>
+                                <!--android:layout_columnWeight="1"-->
+                                <!--android:layout_gravity="fill_horizontal"-->
+                                <!--android:layout_margin="10dp"-->
+                                <!--android:gravity="center"-->
+                                <!--app:cardBackgroundColor="@color/grid"-->
+                                <!--&gt;-->
+
+                                <!--<TextView-->
+                                    <!--android:padding="2dp"-->
+                                    <!--android:layout_height="wrap_content"-->
+                                    <!--android:layout_width="match_parent"-->
+                                    <!--android:layout_gravity="center_horizontal"-->
+                                    <!--android:layout_marginTop="10dp"-->
+                                    <!--android:textColor="@android:color/white"-->
+                                    <!--android:textSize="18dp"-->
+                                    <!--android:text="Notifications"-->
+                                    <!--android:gravity="center"-->
+                                    <!--/>-->
+
+
+                                <!--<TextView-->
+                                    <!--android:layout_height="wrap_content"-->
+                                    <!--android:layout_width="wrap_content"-->
+                                    <!--android:layout_gravity="bottom|center_horizontal"-->
+                                    <!--android:layout_marginTop="5dp"-->
+                                    <!--android:layout_marginBottom="10dp"-->
+                                    <!--android:textColor="@color/NotifyText"-->
+                                    <!--android:textSize="30dp"-->
+                                    <!--android:text="0"-->
+                                    <!--/>-->
+
+                            <!--</android.support.v7.widget.CardView>-->
+                        <!--</GridLayout>-->
+                    <!--</LinearLayout>-->
 
                     <!--Employee and notification grid ends-->
 
