--- a/app/src/main/res/layout/fragment_company_ed.xml
+++ b/app/src/main/res/layout/fragment_company_ed.xml
@@ -338,6 +338,7 @@
 
 
                     <TextView
+                        android:id="@+id/empCount"
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:layout_gravity="bottom|center_horizontal"
@@ -345,7 +346,6 @@
                         android:layout_marginBottom="10dp"
                         android:textColor="@color/NotifyText"
                         android:textSize="30dp"
-                        android:text="0"
                         />
 
                 </android.support.v7.widget.CardView>
