--- a/app/src/main/res/layout/fragment_emp.xml
+++ b/app/src/main/res/layout/fragment_emp.xml
@@ -3,19 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/RecyclerBG"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".EmployeeFragment"
-    android:orientation="vertical">
+    tools:context=".EmpFragment">
 
     <!-- TODO: Update blank fragment layout -->
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/emprecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     </android.support.v7.widget.RecyclerView>
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab2"
